--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # Ignore the javascript directory for now.  Code is not complete.
 # Also need to add instructions to README file for installing
 # packages.
-/javascript/*
+/javascript/node_modules/*
 
 # Ignore downloaded statements
 /ruby/statement_downloads/*
