--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,9 @@
 # packages.
 /javascript/node_modules/*
 
+# Ignore the python cache files
+/python/__pycache__/*
+/python/*.pyc
+
 # Ignore downloaded statements
 /ruby/statement_downloads/*
